<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cnbs.broadcastdemo.act.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/main_hint" />

    <Button
        android:id="@+id/send_my_br_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/main_my_btn"/>

    <Button
        android:id="@+id/send_order_br_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/main_order_btn"/>

    <Button
        android:id="@+id/send_local_br_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/main_local_btn" />

    <Button
        android:id="@+id/send_loginout_br_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/main_loginout_btn"/>

</LinearLayout>
